--- a/src/components/features/OrderForm/OrderForm.scss
+++ b/src/components/features/OrderForm/OrderForm.scss
@@ -1,1 +1,9 @@
 @import '../../../styles/settings.scss';
+
+.component {
+  .orderOptions {
+    background: $color-background;
+    padding: 3*$base-size;
+    border-radius: 4px;
+  }
+}
